--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "ejs": "~2.3.3",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-ejs": "^4.2.0",
     "koa-json": "^2.0.2",
     "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.0",
+    "koa-multer": "^1.0.2",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
